# nanopb-demo

./: CMakeLists.txt  README.md  prj.conf  west.yml
src/: demo.proto  main.c
